<resources>
    <string name="app_name">NewVolley</string>
    <string name="title_activity_navigation">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="settings">Settings</string>
    <string name="get_place">Place</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="communicate">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save_data">Save Data</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="title_activity_maps">Map</string>
</resources>
