<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="587dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_marginTop="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_Retrieve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_data"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_Delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_data"
            android:textAllCaps="false" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>